add endpoint get user by id and update swagger
